Update project to JDK 25